test/files/pos/t12159/I.java
// javaVersion: 17+

package p;

sealed interface I permits J {
}
