test/files/neg/t12159/J.java
// javaVersion: 17+

package p;

sealed public class J implements I permits M {
}
